# langchain_studies

./: README.md  main.py  pyproject.toml
src/langchain_studies/: __init__.py  first_example.py  json_format_example.py
src/langchain_studies/examples/: chat_example.py  main_interface_examples.py
src/langchain_studies/examples/chain_lcel_examples/: first_chain.py  story_with_analysis_chain.py
src/langchain_studies/examples/hugging_faces_examples/: hugging_faces_pipeline_example.py  local_llm_error_handling_example.py
src/langchain_studies/examples/image_generation_examples/: dalle_example.py  stable_diffusion_example.py
src/langchain_studies/examples/json_format_examples/: fake_llm.py
src/langchain_studies/examples/langchain_examples/: first_graph.py  langchain_state.py
src/langchain_studies/examples/multi_llms/: multi_llms.py
src/langchain_studies/examples/multimodal_chat_examples/: gemini_multimodal_image_example.py  openai_multimodal_image_example.py
src/langchain_studies/examples/ollama_examples/: deepseek.py
src/langchain_studies/examples/templates_examples/: prompt_templates.py  template_chat_messages.py
src/langchain_studies/examples/thinking_process_examples/: thinking_process_example.py
src/langchain_studies/factual_creative_llms_examples/: factual_creative_llm_example.py
