[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "langchainstudies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipython>=9.12.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.1",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pytest>=9.0.2",
    "replicate>=1.0.7",
    "ruff>=0.15.6",
    "torch>=2.11.0",
    "transformers>=5.4.0",
]
